Fixed spacing issues on profile page

--- a/frontend/src/components/UserProfile/UserProfile.css
+++ b/frontend/src/components/UserProfile/UserProfile.css
@@ -59,13 +59,13 @@
 .message-image {
     width: 22%;
     border-radius: 100%;
-    margin-left: 65%;
-    margin-top: -5%;
+    margin-top: -7%;
+    margin-left: 70%;
     position: absolute;
 }
 
 .message-text {
     position: absolute;
-    margin-left: 62%;
-    margin-top: -7%;
+    margin-left: 63.5%;
+    margin-top: 3.5%;
 }
